@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class DisableUserUI <<presentation>>
class ChangeUserStateController <<application>>
class AuthorizationService <<service>>
class UserManagementService <<service>>
class AuthzRegistry <<util>>
class "user:User" <<domain>>
class PersistenceContext  <<persistence>>
class RepositoryFactory  <<factory>>
class UserRepository <<repository>>

DisableUserUI --> ChangeUserStateController : theController
ChangeUserStateController --> AuthorizationService: authz
ChangeUserStateController --> UserManagementService: userSvc
ChangeUserStateController ..> AuthzRegistry
AuthzRegistry ..> AuthorizationService
AuthzRegistry ..> UserManagementService
UserManagementService --> PersistenceContext: persistence
UserManagementService --> UserRepository: userRepository
UserManagementService --> "user:User" : userToDisable
PersistenceContext --> RepositoryFactory: factory
RepositoryFactory --> UserRepository: userRepository

DisableUserUI : doShow()
ChangeUserStateController : disableUserByEmail(EmailAddress)
AuthorizationService : ensureAuthenticatedUserHasAnyOf(Role...)
UserManagementService : disableUser(EmailAddress)
PersistenceContext : repositories()
RepositoryFactory : users()
"user:User" : disable()
UserRepository : findUserByEmail(EmailAddress)
UserRepository : save(User)
AuthzRegistry : authorizationService()
AuthzRegistry : userService()

@enduml